--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body{
     background-color: #111d52;
-};
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+#main{
+    margin-top: 10em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#calculator{
+    display:flex;
+    flex-direction: column;
+    width: 28em;
+    align-self: center;
+    background-color: #4d4747;
+    padding: 15px;
+    border-radius: 20px;
+}
+
+#display{
+    background-color: #babbc0;
+    height: 3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
