--- a/style.css
+++ b/style.css
@@ -38,13 +38,14 @@ body{
 }
 
 #calculatorTop{
-    align-self: center;
+    align-self: flex-end;
 }
 
 #calculatorMiddle{
     display:flex;
     align-items: center;
 }
+
 #numbers{
     display: flex;
     flex-wrap: wrap-reverse;
@@ -56,13 +57,31 @@ body{
     align-self: flex-start;
     display: flex;
     flex-direction: column;
-
 }
 
 button{
-    padding: 2em;
+    padding: 1.4em;
+    font-size: 16px;
+    font-weight: bold;
     margin: 0.2em;
     background-color: #bbd3eb;
     border-radius: 1em;
     border:#bbd3eb;
+}
+
+#equal{
+    background-color: #cc571d;
+    color: #ffffff;
+}
+
+.deleteButton{
+    width: 6em;
+    height: 3.5em;
+    background-color: #826767;
+    color: #ffffff;
+}
+
+.operator{
+    background-color: #826767;
+    color: #ffffff;
 }
