--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
+    box-shadow: inset #7a7a7a 0em 0em 1em 0.2em;
+    
 }
 
 #controls{
